This documents significant changes in the 1.0 branch of ksh 93u+m.
For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.

2023-05-18:

- Fixed multiple bugs causing incorrect output for relative date specifications
  given as arguments to printf %(dateformat)T. For example, something like
	printf '%(%Y-%m-%d %H:%M)' 'exact 9 weeks ago'
  will now produce the correct output, which is the same as GNU date:
	date '+%Y-%m-%d %H:%M' '9 weeks ago'

- In the ${parameter/pattern/string} search-and-replace expansion, an
  anchored empty pattern will now match the beginning or the end of the
  string, so that ${parameter/#/string} will prefix the string to the
  parameter value and ${parameter/%/string} will append it. Previously,
  these operations were no-ops (equivalent to ${parameter}). This change
  brings ksh 93u+m into line with mksh, zsh and bash.

2023-05-17:

- Fixed buggy behaviour of printf with mix and match of % and %x$.

2023-05-15:

- Fixed a crash on executing a nested compound assignment in a command
  substitution.

2023-05-14:

- If history expansion is active, then command and file name completion now
  quotes the history expansion characters with a backslash as needed to
  avoid triggering history expansion failures if one of those characters
  occurs in a command or file name.

- Fixed completion of file names starting with an escaped literal tilde.

- Undocumented and non-functional goto label functionality has been removed.
  Command names can now end in ':' like on other shells, as POSIX requires.

2023-05-11:

- The ability to use multi-line editing is now detected at runtime instead of
  compile time, making detection more reliable across terminals and platforms.

2023-05-01:

- Fixes for indexed arrays declared to use enum constants for subscripts:
  - Syntax validation: add missing check for ] in 'typeset -a \[type] array'.