@@ -2,6 +2,12 @@ This documents significant changes in the 1.0 branch of ksh 93u+m.
 For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
 Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.
 
+2023-05-19:
+
+- Fixed a bug in the loop invariants optimizer where a variable for which
+  a .get or .getn discipline function is set within a loop is incorrectly
+  treated as invariant.
+
 2023-05-18:
 
 - Fixed multiple bugs causing incorrect output for relative date specifications
